--- a/DarkMLightMode/index2.html
+++ b/DarkMLightMode/index2.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
-<html lang="en" class="posts">
+<html lang="en" class="anotherPage">
 <head>
     <meta charset="utf-8" />
     <title></title>
     <link href="lib/site.css" rel="stylesheet" />
 </head>
 <body>
-    <p>
-        Hello
-    </p>
-    <p class="special">Special content</p>
+<p>
+    Hello
+</p>
+<p class="special">Special content</p>
 </body>
 </html>
