Update button labels and add new person button
Changed the first button label from "Demo" to "Demo 1".
Added a new button for "Mike Jones" with the label "Demo 2"
and an onclick event to display the person's details.

By Karen

--- a/DialogsCreatedWithChatGPT/index2.html
+++ b/DialogsCreatedWithChatGPT/index2.html
@@ -38,7 +38,18 @@
                     aria-haspopup="dialog">
 
                 <svg class="icon" aria-hidden="true" focusable="false"><use href="#icon-window"></use></svg>
-                <span>Demo</span>
+                <span>Demo 1</span>
+
+            </button>
+
+            <button type="button"
+                    class="btn btn-outline-success"
+                    onclick="showPerson('Mike Jones', '(333) 453-3769', 'jones@example.com')"
+                    aria-controls="personModal"
+                    aria-haspopup="dialog">
+
+                <svg class="icon" aria-hidden="true" focusable="false"><use href="#icon-window"></use></svg>
+                <span>Demo 2</span>
 
             </button>
         </div>
