Change button class to primary for improved styling
Updated the button's class from "btn btn-outline-success" to "btn btn-outline-primary" to reflect a primary action. The button's functionality remains unchanged, still triggering the `showPerson` function with the same parameters when clicked.

by Karen

--- a/DialogsCreatedWithChatGPT/index2.html
+++ b/DialogsCreatedWithChatGPT/index2.html
@@ -43,7 +43,7 @@
             </button>
 
             <button type="button"
-                    class="btn btn-outline-success"
+                    class="btn btn-outline-primary"
                     onclick="showPerson('Mike Jones', '(333) 453-3769', 'jones@example.com')"
                     aria-controls="personModal"
                     aria-haspopup="dialog">
