Update Bootstrap and jQuery to latest versions
This commit includes several updates and additions:
- Updated Bootstrap to version 5.3.3, including new utility functions, event handling mechanisms, and component classes. Key components such as `Alert`, `Button`, `Carousel`, and others have been implemented or updated.
- Added new CSS files for RTL support and source maps for debugging.
- Introduced new JavaScript files for jQuery Validation Plugin and unobtrusive validation support, including both full and minified versions.
- Updated jQuery to version 3.7.1, including a minified version of jQuery Slim, which excludes certain features for reduced file size and improved performance.
- Added source maps for jQuery Slim to enhance debugging capabilities.

by Karen

--- a/DialogsCreatedWithChatGPT/index2.html
+++ b/DialogsCreatedWithChatGPT/index2.html
@@ -66,6 +66,13 @@
                 <span>Demo 2</span>
 
             </button>
+
+            <button type="button"
+                    class="btn btn-warning"
+                    onclick="showAutoCloseAlert()">
+                Show Alert
+            </button>
+
         </div>
     </main>
 
@@ -162,10 +169,27 @@
         setTimeout(function () {
             const alertElement = document.getElementById('autoCloseAlert');
             if (alertElement) {
-                const bsAlert = bootstrap.Alert.getOrCreateInstance(alertElement);
-                bsAlert.close();
+                alertElement.classList.remove('show');
+                alertElement.style.display = 'none';
             }
         }, 5000);
+
+
+        function showAutoCloseAlert() {
+            const alertElement = document.getElementById('autoCloseAlert');
+            if (alertElement) {
+                alertElement.style.display = 'block';
+                alertElement.classList.add('show');
+
+                // Restart the auto-close timer
+                setTimeout(function () {
+                    alertElement.classList.remove('show');
+                    alertElement.style.display = 'none';
+                }, 5000);
+            }
+        }
+
+
     </script>
 </body>
 </html>
